# asi

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: design-decisions.md  faq.md  threat-model.md
examples/invocation/: example-envelope.json
examples/minimal-skill/: SKILL.md  manifest.json
examples/minimal-skill/asi/: signature.json
sdk/node/: README.md  package-lock.json  package.json
sdk/node/src/: asi.mjs
sdk/node/test/: test.mjs
sdk/python/: pyproject.toml
sdk/python/asi/: __init__.py  core.py  utils.py
sdk/python/tests/: test_asi.py
spec/: ASI-v0.1.md  CHANGELOG.md  roadmap.md
test-vectors/: canonicalization.json  invocation-signing-input.json  publisher-signing-input.json
test-vectors/bundle-example/: SKILL.md  manifest.json
test-vectors/bundle-example/asi/: signature.json
test-vectors/bundle-example/src/: example.js
